This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/11/19: Added exposure time parameters for Rio camera.

1/11/19: Added script commands to load or merge a Navigator file, report the
filename, and report if it is open.

1/8/19: Fixed problem moving stage from scope control in continuous mode.

1/8/19: Initial processing steps for frame alignment can now be done on the
GPU, which can greatly speed it up for faster cards with enough memory.

1/8/19: Enabled shift buttons for stage movement in scope control dialog when
there is no beam calibration.

1/8/19: Fixed providing extension .jpg for jpeg files.

1/7/19: Buffers can be specified by number or letter in script commands.

1/7/19: Added properties for defining entries in a Tools menu for running
external programs, and script commands for running programs similarly.

1/7/19: Added script command to open .mdoc for frames.

1/7/19: Added property to specify a possibly multiline title entry to be
included in frame files saved from K2/K3 and in frame stack mdoc files.

1/7/19: Fixed crash when exiting with one-line script open.

1/7/19: Fixed defect correct of isolated bad pixels.

1/7/19: Fixed binning shown in frame mdocs for K3.

12/20/18: Added basic support for moving to next phase plate position on FEI
scopes.

12/20/18: Changed phase output to log from Ctffind to degrees.  Made "reported
value" variables set after command match the output to the log; i.e., mean
defocus and astigmatism in microns, and phase in degrees.  Made phase entries
to Ctffind command be in degrees instead of radians.  Fixed bad scaling of
fixed phase shift value for use in the command.

12/18/18: XF416 is now supported in normal shutter mode, and ability to get
normalized images from Tietz interface.
