@@ -1,5 +1,10 @@
-// OneLineScript.cpp : implementation file
+// OneLineScript.cpp : Dialog for simple one-line scripts
 //
+// Copyright (C) 2018-2019 by the Regents of the University of
+// Colorado.  See Copyright.txt for full notice of copyright and limitations.
+//
+// Author: David Mastronarde
+//////////////////////////////////////////////////////////////////////
 
 #include "stdafx.h"
 #include "SerialEM.h"
@@ -12,7 +17,6 @@
 COneLineScript::COneLineScript(CWnd* pParent /*=NULL*/)
 	: CBaseDlg(COneLineScript::IDD, pParent)
   , m_strCompletions(_T("Tab or  `  to complete command"))
-  , m_strOneLine(_T(""))
 {
   mNonModal = true;
   mInitialized = false;
@@ -26,20 +30,34 @@ void COneLineScript::DoDataExchange(CDataExchange* pDX)
 {
   CDialog::DoDataExchange(pDX);
   DDX_Text(pDX, IDC_STAT_COMPLETIONS, m_strCompletions);
-  DDX_Control(pDX, IDC_EDIT_ONE_LINE, m_editOneLine);
-  DDX_Text(pDX, IDC_EDIT_ONE_LINE, m_strOneLine);
-  DDX_Control(pDX, IDOK, m_butRun);
+  DDX_Control(pDX, IDC_EDIT_ONE_LINE, m_editOneLine[0]);
+  DDX_Control(pDX, IDC_EDIT_ONE_LINE2, m_editOneLine[1]);
+  DDX_Control(pDX, IDC_EDIT_ONE_LINE3, m_editOneLine[2]);
+  DDX_Control(pDX, IDC_EDIT_ONE_LINE4, m_editOneLine[3]);
+  DDX_Control(pDX, IDC_EDIT_ONE_LINE5, m_editOneLine[4]);
+  DDX_Text(pDX, IDC_EDIT_ONE_LINE, m_strOneLine[0]);
+  DDX_Text(pDX, IDC_EDIT_ONE_LINE2, m_strOneLine[1]);
+  DDX_Text(pDX, IDC_EDIT_ONE_LINE3, m_strOneLine[2]);
+  DDX_Text(pDX, IDC_EDIT_ONE_LINE4, m_strOneLine[3]);
+  DDX_Text(pDX, IDC_EDIT_ONE_LINE5, m_strOneLine[4]);
+  DDX_Control(pDX, IDC_RUN_ONE_LINE1, m_butRun[0]);
+  DDX_Control(pDX, IDC_RUN_ONE_LINE2, m_butRun[1]);
+  DDX_Control(pDX, IDC_RUN_ONE_LINE3, m_butRun[2]);
+  DDX_Control(pDX, IDC_RUN_ONE_LINE4, m_butRun[3]);
+  DDX_Control(pDX, IDC_RUN_ONE_LINE5, m_butRun[4]);
 }
 
 
 BEGIN_MESSAGE_MAP(COneLineScript, CDialog)
-  ON_EN_CHANGE(IDC_EDIT_ONE_LINE, OnEnChangeEditOneLine)
+  ON_CONTROL_RANGE(EN_CHANGE, IDC_EDIT_ONE_LINE, IDC_EDIT_ONE_LINE5, OnEnChangeEditOneLine)
+  ON_CONTROL_RANGE(BN_CLICKED, IDC_RUN_ONE_LINE1, IDC_RUN_ONE_LINE5, OnRunClicked)
   ON_WM_SIZE()
 END_MESSAGE_MAP()
 
 BOOL COneLineScript::OnInitDialog()
 {
   CBaseDlg::OnInitDialog();
+  int ind, lastOne = 0;
 
   // Here is the obscure set of information needed to reposition the Run button and resize
   // the text box when the width changes
@@ -47,14 +65,25 @@ BOOL COneLineScript::OnInitDialog()
   GetClientRect(clientRect);
   GetWindowRect(wndRect);
   int iXoffset = (wndRect.Width() - clientRect.Width()) / 2;
-  m_butRun.GetWindowRect(runRect);
-  m_iRunTop = (runRect.top - wndRect.top) - (wndRect.Height() - clientRect.Height())
-    + iXoffset;
+  for (ind = 0; ind < MAX_ONE_LINE_SCRIPTS; ind++) {
+    m_butRun[ind].GetWindowRect(runRect);
+    m_iRunTop[ind] = (runRect.top - wndRect.top) - 
+      (wndRect.Height() - clientRect.Height()) + iXoffset;
+    if (!m_strOneLine[ind].IsEmpty())
+      lastOne = ind;
+  }
   m_iRunLeftOrig = runRect.left - wndRect.left - iXoffset;
-  m_editOneLine.GetWindowRect(editRect);
+  m_editOneLine[0].GetWindowRect(editRect);
   m_iWinXorig = wndRect.Width();
   m_iEditXorig = editRect.Width();
   m_iEditHeight = editRect.Height();
+
+  // Resize to a bit longer than the last non-empty string: this is overriden by the
+  // placement once that exists in settings
+  if (lastOne < MAX_ONE_LINE_SCRIPTS - 1) {
+    ind = wndRect.Height() + m_iRunTop[lastOne] - m_iRunTop[MAX_ONE_LINE_SCRIPTS - 1] + 2;
+    SetWindowPos(NULL, 0, 0, wndRect.Width(), ind, SWP_NOMOVE);
+  }
   UpdateData(false);
   mInitialized = true;
   return FALSE;
@@ -63,20 +92,28 @@ BOOL COneLineScript::OnInitDialog()
 // COneLineScript message handlers
 void COneLineScript::OnOK()
 {
+}
+
+// Run one of them
+void COneLineScript::OnRunClicked(UINT nID)
+{
+  int ind = nID - IDC_RUN_ONE_LINE1;
   UpdateData(true);
-  mMacros[MAX_MACROS] = m_strOneLine;
-  if (!m_strOneLine.IsEmpty())
-    mWinApp->mMacroProcessor->Run(MAX_MACROS);
+  mMacros[MAX_MACROS + ind] = m_strOneLine[ind];
+  if (!m_strOneLine[ind].IsEmpty())
+    mWinApp->mMacroProcessor->Run(MAX_MACROS + ind);
   mWinApp->RestoreViewFocus();
 }
 
+// Closing the window: transfer the strings
 void COneLineScript::OnCancel()
 {
   mWinApp->RestoreViewFocus();
   UpdateData(true);
   if (mWinApp->mMacroProcessor->DoingMacro())
     return;
-  mMacros[MAX_MACROS] = m_strOneLine;
+  for (int ind = 0; ind < MAX_ONE_LINE_SCRIPTS; ind++)
+    mMacros[MAX_MACROS+ ind] = m_strOneLine[ind];
   mWinApp->mMacroProcessor->OneLineClosing();
   DestroyWindow();
 }
@@ -87,18 +124,23 @@ void COneLineScript::PostNcDestroy()
   CDialog::PostNcDestroy();
 }
 
+// New size: lengthen the text boxes, reposition the buttons
 void COneLineScript::OnSize(UINT nType, int cx, int cy)
 {
   if (!mInitialized)
     return;
   CRect wndRect, editRect, runRect;
+  int ind;
   CDialog::OnSize(nType, cx, cy);
   GetWindowRect(wndRect);
   int delta = wndRect.Width() - m_iWinXorig;
   int newx = B3DMAX(5, m_iEditXorig + delta);
-  m_editOneLine.SetWindowPos(NULL, 0, 0, newx, m_iEditHeight, SWP_NOZORDER | SWP_NOMOVE);
-  m_butRun.SetWindowPos(NULL, B3DMAX(5, m_iRunLeftOrig + delta), m_iRunTop, 0, 0, 
-    SWP_NOZORDER | SWP_NOSIZE);
+  for (ind = 0; ind < MAX_ONE_LINE_SCRIPTS; ind++) {
+    m_editOneLine[ind].SetWindowPos(NULL, 0, 0, newx, m_iEditHeight, 
+      SWP_NOZORDER | SWP_NOMOVE);
+    m_butRun[ind].SetWindowPos(NULL, B3DMAX(5, m_iRunLeftOrig + delta), m_iRunTop[ind], 0,
+      0, SWP_NOZORDER | SWP_NOSIZE);
+  }
 }
 
 // Translate tab to our completion character.  It is good on US standard keyboards only
@@ -109,27 +151,28 @@ BOOL COneLineScript::PreTranslateMessage(MSG* pMsg)
   return CDialog::PreTranslateMessage(pMsg);
 }
 
+// Enable/disable the buttons
 void COneLineScript::Update()
 {
   BOOL runnable = mWinApp->mMacroProcessor->MacroRunnable(MAX_MACROS);
-  ((CButton *)GetDlgItem(IDOK))->EnableWindow(runnable);
-  //((CButton *)GetDlgItem(IDCANCEL))->EnableWindow(
-    //!mWinApp->mMacroProcessor->DoingMacro());
+  for (int ind = 0; ind < MAX_ONE_LINE_SCRIPTS; ind++)
+    m_butRun[ind].EnableWindow(runnable);
 }
 
-void COneLineScript::OnEnChangeEditOneLine()
+// Process a character in a line
+void COneLineScript::OnEnChangeEditOneLine(UINT nID)
 {
-  int sel1, sel2;
+  int sel1, sel2, ind = nID - IDC_EDIT_ONE_LINE;
   bool setCompletions, completing;
   UpdateData(true);
-  m_editOneLine.GetSel(sel1, sel2);
-  CMacroEditer::HandleCompletionsAndIndent(m_strOneLine, m_strCompletions, sel2, 
+  m_editOneLine[ind].GetSel(sel1, sel2);
+  CMacroEditer::HandleCompletionsAndIndent(m_strOneLine[ind], m_strCompletions, sel2, 
     setCompletions, completing);
   if (setCompletions)
     SetDlgItemText(IDC_STAT_COMPLETIONS, m_strCompletions);
   if (completing) {
     UpdateData(false);
-    m_editOneLine.SetSel(sel2, sel2);
+    m_editOneLine[ind].SetSel(sel2, sel2);
   }
 }
 
