@@ -2903,15 +2903,23 @@ BEGIN
     LTEXT           "(2048 x 2048)",IDC_STAT_REC_AREA,23,102,161,8
 END
 
-IDD_ONELINESCRIPT DIALOGEX 0, 0, 157, 24
+IDD_ONELINESCRIPT DIALOGEX 0, 0, 151, 81
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-CAPTION "One-line Script Editor"
+CAPTION "Five One-line Scripts"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Run",IDOK,119,10,36,12
-    LTEXT           "Tab or  `  to complete command",IDC_STAT_COMPLETIONS,1,1,154,8
-    EDITTEXT        IDC_EDIT_ONE_LINE,1,10,115,12,ES_AUTOHSCROLL
+    LTEXT           "Tab or  `  to complete command",IDC_STAT_COMPLETIONS,3,1,146,8
+    EDITTEXT        IDC_EDIT_ONE_LINE,3,10,115,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run",IDC_RUN_ONE_LINE1,121,10,27,12
+    EDITTEXT        IDC_EDIT_ONE_LINE2,3,24,115,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run",IDC_RUN_ONE_LINE2,121,24,27,12
+    EDITTEXT        IDC_EDIT_ONE_LINE3,3,38,115,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run",IDC_RUN_ONE_LINE3,121,38,27,12
+    EDITTEXT        IDC_EDIT_ONE_LINE4,3,52,115,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run",IDC_RUN_ONE_LINE4,121,52,27,12
+    EDITTEXT        IDC_EDIT_ONE_LINE5,3,66,115,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Run",IDC_RUN_ONE_LINE5,121,66,27,12
 END
 
 
@@ -3331,8 +3339,8 @@ BEGIN
     IDD_ONELINESCRIPT, DIALOG
     BEGIN
         LEFTMARGIN, 3
-        RIGHTMARGIN, 153
-        BOTTOMMARGIN, 22
+        RIGHTMARGIN, 147
+        BOTTOMMARGIN, 79
     END
 END
 #endif    // APSTUDIO_INVOKED
