@@ -30,7 +30,7 @@
         </TR>
         <TR VALIGN="top">
           <TD class="style1"><a href="#hid_script_runonecommand">Edit/Run One Line</a>...</TD>
-          <TD class="style2">&nbsp;</TD>
+          <TD class="style2">Open window to allow up to 5 one-line scripts</TD>
         </TR>
         <TR VALIGN="top">
           <TD class="style1"><A HREF="#hid_macro_stop">Stop</A></TD>
@@ -100,9 +100,14 @@
     </b>
       <P><A NAME="hid_macro_stop"></A><b>Edit/Run One Line command (Script menu)</b></P>
     <P>Use this command to open a small free-standing window in which you can enter a 
-      one-line command and run it.&nbsp; Command completion with tab or ` works in 
-      this window just as in a regular script editor.&nbsp; The line is preserved 
-      between sessions in the settings file.</P>
+      set of one-line commands and run them.&nbsp;The window allows up to 5 such 
+      scripts.&nbsp; This window is resizable, so you can change the height to show 
+      just the number that you need, or change the length to accommodate longer 
+      entries.&nbsp; Command completion with tab or ` works in 
+      this window just as in a regular script editor.&nbsp; The lines are preserved 
+      between sessions in the settings file.&nbsp; The first time that you open the 
+      window, it will show one text box; subsequently it will restore its previous 
+      size and location.</P>
     <P><B>Stop command (Script menu)</B></P>
       <P>Use this command to stop a running script.</P>
       <P><A NAME="hid_macro_end"></A><B>End command (Script menu)</B></P>
