@@ -69,7 +69,7 @@ ExternalTool 3dmod Image File
 ToolCommand 3 C:\Program Files\3dmod\3dmod
 ToolArguments 3 %imagefile%
 </pre>These property entries will put three entries in the Tools menu.&nbsp; The 
-    first will open the '.mdoc' file associated wit the current image file in 
+    first will open the '.mdoc' file associated with the current image file in 
     Notepad; the second will open the Navigator file in Notepad, and the third will 
     open the current file in 3dmod, installed from the standalone 3dmod package.</p>
   </BODY>
